Force proxy-server network to be internal

--- a/services/nginx-proxy-manager/docker-compose.yml
+++ b/services/nginx-proxy-manager/docker-compose.yml
@@ -24,6 +24,7 @@ services:
 
 networks:
     net:
+        internal: true
     mariadb-net:
         external: true
         name: "${MARIADB_NETWORK}"
