started on pihole stack

--- a/.env.example
+++ b/.env.example
@@ -84,3 +84,10 @@ NEXTCLOUD_MAIL_DOMAIN=example.com
 NEXTCLOUD_PHP_MEMORY_LIMIT=2G
 NEXTCLOUD_PHP_UPLOAD_LIMIT=16G
 NEXTCLOUD_TRUSTED_PROXIES=172.17.0.0/16
+
+
+# Pihole
+PIHOLE_ETC_PIHOLE_DIR=/host/pihole/etc/pihole/dir
+PIHOLE_ETC_DNSMASQ_DIR=/host/pihole/etc/dnsmasq.d/dir
+PIHOLE_WEBPASSWORD=password
+PIHOLE_LAN_IP=192.168.10.11
