Match cron with main environment and tmpfs settings

--- a/apps/nextcloud/docker-compose.yml
+++ b/apps/nextcloud/docker-compose.yml
@@ -43,6 +43,24 @@ services:
     restart: always
     volumes_from:
       - nextcloud
+    tmpfs:
+      - /tmp
+    environment:
+      - POSTGRES_HOST
+      - POSTGRES_DB=${NEXTCLOUD_POSTGRES_DB}
+      - POSTGRES_USER=${NEXTCLOUD_POSTGRES_USER}
+      - POSTGRES_PASSWORD=${NEXTCLOUD_POSTGRES_PASSWORD}
+      - NEXTCLOUD_ADMIN_USER
+      - NEXTCLOUD_ADMIN_PASSWORD
+      - NEXTCLOUD_TRUSTED_DOMAINS
+      - REDIS_HOST=redis
+      - SMTP_HOST=${EMAIL_RELAY_HOST}
+      - SMTP_AUTHTYPE=PLAIN
+      - MAIL_FROM_ADDRESS=${NEXTCLOUD_MAIL_FROM_ADDRESS}
+      - MAIL_DOMAIN=${NEXTCLOUD_MAIL_DOMAIN}
+      - PHP_MEMORY_LIMIT=${NEXTCLOUD_PHP_MEMORY_LIMIT}
+      - PHP_UPLOAD_LIMIT=${NEXTCLOUD_PHP_UPLOAD_LIMIT}
+      - TRUSTED_PROXIES=${NEXTCLOUD_TRUSTED_PROXIES}
     entrypoint: /cron.sh
     networks:
       - net
