Add searxng stack

--- a/.env.example
+++ b/.env.example
@@ -91,3 +91,8 @@ PIHOLE_ETC_PIHOLE_DIR=/host/pihole/etc/pihole/dir
 PIHOLE_ETC_DNSMASQ_DIR=/host/pihole/etc/dnsmasq.d/dir
 PIHOLE_WEBPASSWORD=password
 PIHOLE_LAN_IP=192.168.10.11
+
+
+# Searxng
+SEARXNG_ETC_DIR=/host/searxng/etc/dir
+SEARXNG_HOSTNAME=https://search.example.com
