Fix hostname example

--- a/.env.example
+++ b/.env.example
@@ -95,4 +95,4 @@ PIHOLE_LAN_IP=192.168.10.11
 
 # Searxng
 SEARXNG_ETC_DIR=/host/searxng/etc/dir
-SEARXNG_HOSTNAME=https://search.example.com
+SEARXNG_HOSTNAME=search.example.com
