Set restart policy

--- a/apps/searxng/docker-compose.yml
+++ b/apps/searxng/docker-compose.yml
@@ -5,6 +5,7 @@ services:
   redis:
     container_name: redis
     image: "redis:alpine"
+    restart: always
     command: redis-server --save "" --appendonly "no"
     networks:
       - searxng
@@ -20,6 +21,7 @@ services:
   searxng:
     container_name: searxng
     image: searxng/searxng:latest
+    restart: always
     networks:
       - searxng
       - reverse-proxy
@@ -40,6 +42,7 @@ services:
       options:
         max-size: "1m"
         max-file: "1"
+
 networks:
   searxng:
     internal: true
