Add heimdall stack

--- a/.env.example
+++ b/.env.example
@@ -96,3 +96,7 @@ PIHOLE_LAN_IP=192.168.10.11
 # Searxng
 SEARXNG_ETC_DIR=/host/searxng/etc/dir
 SEARXNG_HOSTNAME=search.example.com
+
+
+# Heimdall
+HEIMDALL_CONFIG_DIR=/host/heimdall/config/dir
