Add Uptime Kuma stack

--- a/.env.example
+++ b/.env.example
@@ -100,3 +100,6 @@ SEARXNG_HOSTNAME=search.example.com
 
 # Heimdall
 HEIMDALL_CONFIG_DIR=/host/heimdall/config/dir
+
+# Uptime Kuma
+UPTIME_KUMA_DATA_DIR=/host/uptime_kuma/data/dir
