Add external net access to searxng

--- a/apps/searxng/docker-compose.yml
+++ b/apps/searxng/docker-compose.yml
@@ -25,6 +25,7 @@ services:
     networks:
       - searxng
       - reverse-proxy
+      - external-net
     ports:
      - "127.0.0.1:8080:8080"
     volumes:
