Add email-relay network to uptime-kuma
Allows emails as notifications, and to also monitor email relay.

--- a/apps/uptime-kuma/docker-compose.yml
+++ b/apps/uptime-kuma/docker-compose.yml
@@ -23,3 +23,6 @@ networks:
   mariadb-net:
     external: true
     name: ${MARIADB_NETWORK}
+  email-relay-net:
+    external: true
+    name: "${EMAIL_RELAY_NETWORK}"
