Finish adding email-relay-net to uptime-kuma

--- a/apps/uptime-kuma/docker-compose.yml
+++ b/apps/uptime-kuma/docker-compose.yml
@@ -12,6 +12,7 @@ services:
       - reverse-proxy-net
       - postgres-net
       - mariadb-net
+      - email-relay-net
 
 networks:
   reverse-proxy-net:
